fix: align metadata

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -28,6 +28,7 @@ article>p {
 
 #heading {
   hyphens: auto;
+  text-align: left;
 }
 
 #title {
